2009-04-27  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ComboBoxTest.cs: Add some more NUnit
	  tests on ComboBox.

2009-04-24  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/MiscParsing.cs:
	* misc/Parsing/MiscParsingAnimation.xaml: New test for managed
	namespaces in property paths.

2009-04-24  Sebastien Pouliot  <sebastien@ximian.com>

	* System/UriTest.cs: More tests for relative URI
	* System.Net/EndPointTest.cs: New.
	* System.Net/IPEndPointTest.cs: New.

2009-04-24  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ComboBoxTest.cs: Ensure that the
	  currently selected item is displayed correctly when the
	  popup is not open.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemCollectionTest.cs: Add another
	  test for ItemsControl parenting.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs:
	* System.Windows.Controls/TabControlTests.cs:
	* System.Windows.Controls/ItemCollectionTest.cs:
	  FrameworkElements added to an ItemsCollection need to have
	  their logical parent set to the ItemsControl.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* misc/Parsing/PrimitiveTest.cs: add ParseIntOnlyWhitespace, and
	remove the MoonlightBug from ParseEmptyInt.

2009-04-22  Chris Toshok  <toshok@ximian.com>

	* misc/Parsing/PrimitiveTest.cs: enable this test, and add some
	MoonlightBugs for the tests we fail.

2009-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Use $(top_builddir) instead of $(builddir).
	  Makes sles 10 happier.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media.Animation/StoryboardTest.cs: Add an
	  [Ignore] to MultipleComplete as it's flapping.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media.Animation/StoryboardTest.cs: Add two
	  ignores for storyboard tests which are flapping. I think
	  toshok already fixed the other flaps.
