@@ -1,5 +1,12 @@
 2009-04-27  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/ListBoxTest.cs:
+	* System.Windows.Controls/ComboBoxTest.cs:
+	* System.Windows.Controls/ItemsControlTest.cs: Add tests to
+	  ensure IsItemItsOwnContainer is correct.
+
+2009-04-27  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/ComboBoxTest.cs: Add some more NUnit
 	  tests on ComboBox.
 
